version: "5.0.0"
opam-version: "2.0"
maintainer:   "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com"
authors:      ["Anil Madhavapeddy" "Richard Mortier" "Thomas Gazagnaire"
               "Pierre Chambart" "David Kaloper" "Jeremy Yallop" "David Scott"
               "Mindy Preston" "Thomas Leonard" "Etienne Millon" ]
homepage:     "https://github.com/mirage/ocaml-cstruct"
license:      "ISC"
dev-repo: "git+https://github.com/mirage/ocaml-cstruct.git"
bug-reports:  "https://github.com/mirage/ocaml-cstruct/issues"
doc: "https://mirage.github.io/ocaml-cstruct/"
tags: [ "org:mirage" "org:ocamllabs" ]

extra-files: [
  ["dune.patch" "md5=dbd7b5a95f9a5cc81cf63ad74e8ddd71"]
  ["lwt_cstruct_mli.patch" "md5=6324f7266736d96e85d5a6d639b6dae1"]
  ["lwt_cstruct_ml.patch" "md5=bc1ceab9a2104d14e71546e05d14605c"]
]
patches: ["dune.patch" "lwt_cstruct_mli.patch" "lwt_cstruct_ml.patch"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-x" "riscv" "-p" "cstruct-lwt" "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "ocaml-riscv"
  (* "base-unix" *)
  "lwt-riscv"
  "cstruct-riscv" {=version}
  "dune" {build & >= "1.0"}
]
synopsis: "Access C-like structures directly from OCaml"
description: """
Cstruct is a library and syntax extension to make it easier to access C-like
structures directly from OCaml.  It supports both reading and writing to these
structures, and they are accessed via the `Bigarray` module."""
