(library
 (name cstruct)
 (public_name cstruct)
 (libraries bigarray-compat)
 (c_names cstruct_stubs)
 (wrapped false)
 (js_of_ocaml (javascript_files cstruct.js))
 (modules cstruct)
 (ocamlopt_flags (-default-compartment-id 16 -function-sections)))

(library
 (name cstruct_sexp)
 (public_name cstruct-sexp)
 (modules cstruct_sexp)
 (libraries cstruct sexplib)
 (ocamlopt_flags (-default-compartment-id 16 -function-sections)))
